Added category edition and task edits rebuilt

--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@
 
    <main class="l-site-container">
       <section class="c-group-tasks">
-         <div class="c-category">
-            <p class="c-category__text" data-value="Kategoria0">Kategoria</p>
+         <div class="c-category" style="background: #1a1a1a;">
+            <p class=" c-category__text" data-value="Kategoria0">Kategoria</p>
             <span class="c-category__manage t-task-menage fas fa-pen"></span>
             <span class="c-category__manage t-task-menage fas fa-copy"></span>
             <span class="c-category__manage t-task-menage fas fa-trash-alt"></span>
          </div>
          <ul class="c-tasks">
 
-            <li class="c-tasks__item" style="background: #0084ff">
+            <li class="c-tasks__item" style="background: #0084ff;">
                <input class="c-tasks__checkbox-input" id="task1t" type="checkbox" style="display: none;" />
                <label class="c-tasks__checkbox-label" for="task1t">
                   <span>
@@ -93,8 +93,8 @@
                   </span>
                   <span class="c-tasks__text">Pozmywaj naczynia</span>
                </label>
-               <span class="c-tasks__manage fas fa-pen"></s></span>
-               <span class="c-tasks__manage fas fa-copy"></s></span>
+               <span class="c-tasks__manage fas fa-pen"></span>
+               <span class="c-tasks__manage fas fa-copy"></span>
                <span class="c-tasks__manage fas fa-trash-alt"></span>
             </li>
 
@@ -110,7 +110,7 @@
                   </span>
                </label>
                <span class="c-tasks__manage fas fa-pen"></span>
-               <span class="c-tasks__manage fas fa-copy"></s></span>
+               <span class="c-tasks__manage fas fa-copy"></span>
                <span class="c-tasks__manage fas fa-trash-alt"></span>
             </li>
 
@@ -125,7 +125,7 @@
                   <span class="c-tasks__text">Wynieś śmieci</span>
                </label>
                <span class="c-tasks__manage fas fa-pen"></span>
-               <span class="c-tasks__manage fas fa-copy"></s></span>
+               <span class="c-tasks__manage fas fa-copy"></span>
                <span class="c-tasks__manage fas fa-trash-alt"></span>
             </li>
 
