Add objects: edit and copy

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
    <main class="l-site-container">
       <section class="c-group-tasks">
          <div class="c-category" style="background: #1a1a1a;">
-            <p class=" c-category__text" data-value="Kategoria0">Kategoria</p>
+            <p class="c-category__text" data-cattitle="Kategoria" data-catcopy="0">Kategoria</p>
             <span class="c-category__manage t-task-menage fas fa-pen"></span>
             <span class="c-category__manage t-task-menage fas fa-copy"></span>
             <span class="c-category__manage t-task-menage fas fa-trash-alt"></span>
